--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -15,6 +15,13 @@
         android:orientation="vertical"
         android:layout_margin="15dp">
 
+        <TextView
+            android:id="@+id/id_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Id"
+            android:textColor="@color/black"
+            android:textSize="18dp"/>
 
         <TextView
             android:id="@+id/name_textview"
