--- a/app/src/main/res/layout/activity_create_and_update.xml
+++ b/app/src/main/res/layout/activity_create_and_update.xml
@@ -86,6 +86,13 @@
             app:backgroundTint="@color/red"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/tv_hasil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="hasil"/>
+
 
 
     </LinearLayout>
