--- a/app/src/main/res/layout/activity_create_and_update.xml
+++ b/app/src/main/res/layout/activity_create_and_update.xml
@@ -39,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:id="@+id/nim_editText"
                 android:layout_height="wrap_content"
-                android:inputType="number"/>
+                />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -80,19 +80,15 @@
             android:layout_height="wrap_content"/>
         <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
+            android:text="Update"
+            android:id="@+id/update_button"
+            android:layout_height="wrap_content"/>
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="match_parent"
             android:id="@+id/delete_button"
-            android:visibility="gone"
             android:text="DELETE"
             app:backgroundTint="@color/red"
             android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/tv_hasil"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="hasil"/>
-
 
 
     </LinearLayout>
